[package]
name = "pmdk-util"
version = "0.1.0"
authors = ["Zhiting Zhu <zhitingz@cs.utexas.edu>"]
edition = "2018"

[dependencies]
errno = "0.2"
libc = "0.2"
quick-error = "1.2.0"
rust-extra = "0.0.10"
pmem-sys = { path = "../pmem-sys" }
pmemblk-sys = { path = "../pmemblk-sys" }
pmemlog-sys = { path = "../pmemlog-sys" }
pmemobj-sys = { path = "../pmemobj-sys" }
